<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewPlanLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/planLabel"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewDiscoveryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discoveryLabel"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/discoveryGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio_discovery_initial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial" />

                <RadioButton
                    android:id="@+id/radio_discovery_continuous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continuous" />

                <RadioButton
                    android:id="@+id/radio_discovery_periodic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/periodic" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewConnectionModeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectionModeLabel"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/connectionModeGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio_progressive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progressive" />

                <RadioButton
                    android:id="@+id/radio_alltogether"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alltogether" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewConnectionTimingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timingLabel"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/connectionTimingGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_immediate_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immediateStop" />

            <RadioButton
                android:id="@+id/radio_immediate_while"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/immediateWhile" />

            <RadioButton
                android:id="@+id/radio_delayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delayed" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSetPlan"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="setPlanParameters"
        android:text="@string/setPlanButton" />

    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="updateSpinner"
        android:text="@string/refreshButton" />

    <Spinner
        android:id="@+id/spinnerBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- <ListView -->
    <!-- android:id="@+id/listViewDevices" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="fill_parent" -->
    <!-- android:layout_weight="1" /> -->

</LinearLayout>